--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "eslint-plugin-prettier": "^3.3.1",
+    "immutability-helper": "^3.1.1",
     "react": "^17.0.2",
+    "react-dnd": "^14.0.2",
+    "react-dnd-html5-backend": "^14.0.0",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "typescript": "^4.0.3",
@@ -35,7 +39,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "yarn run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "format": "prettier --check \"**/*.{js,ts,tsx}\""
   },
   "eslintConfig": {
     "extends": [
@@ -56,6 +61,8 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0"
+    "eslint-config-prettier": "^8.1.0",
+    "gh-pages": "^3.1.0",
+    "prettier": "^2.2.1"
   }
 }
