--- a/package.json
+++ b/package.json
@@ -63,11 +63,14 @@
   "devDependencies": {
     "@craco/craco": "^6.1.1",
     "@tailwindcss/postcss7-compat": "^2.1.0",
+    "@types/react-router-dom": "^5.1.7",
     "autoprefixer": "^9",
+    "craco-alias": "^2.2.0",
     "eslint-config-prettier": "^8.1.0",
     "gh-pages": "^3.1.0",
     "postcss": "^7",
     "prettier": "^2.2.1",
+    "react-router-dom": "^5.2.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat"
   }
 }
