--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-app",
   "version": "0.1.0",
-  "homepage": "./",
+  "homepage": "react-pwa-boilerplate",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
