--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,7 @@
 {
   "short_name": "React App",
-  "name": "Create React App Sample",
+  "name": "Create React App Sample with some extras",
+  "description": "Created by Todor Imreorov",
   "icons": [
     {
       "src": "favicon.ico",
@@ -20,7 +21,9 @@
     }
   ],
   "start_url": ".",
-  "display": "standalone",
+  "fingerprints": "false",
+  "display": "fullscreen",
+  "crossorigin": "use-credentials",
   "theme_color": "#000000",
   "background_color": "#ffffff"
 }
