--- a/manifest.json
+++ b/manifest.json
@@ -25,5 +25,8 @@
   "display": "fullscreen",
   "crossorigin": "use-credentials",
   "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "background_color": "#ffffff",
+  "permissions": [
+    "unlimitedStorage"
+  ]
 }
