--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -3,6 +3,7 @@
     "baseUrl": "./src",
     "paths": {
       "@components/*" : ["./components/*"],
+      "@hooks/*" : ["./hooks/*"],
       "@pages/*" : ["./pages/*"],
       "@images/*" : ["./assets/images/*"]
     }
