--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "eslint-plugin-prettier": "^3.3.1",
+    "gists": "^2.0.0",
     "immutability-helper": "^3.1.1",
     "react": "^17.0.2",
     "react-beautiful-dnd": "^13.1.0",
