--- a/package.json
+++ b/package.json
@@ -73,6 +73,8 @@
     "postcss": "^7",
     "prettier": "^2.2.1",
     "react-router-dom": "^5.2.0",
+    "sweetalert2": "^10.16.4",
+    "sweetalert2-react-content": "^3.3.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat"
   }
 }
