--- a/engine/package.json
+++ b/engine/package.json
@@ -39,8 +39,8 @@
     "afterSign": "engine/electron/notarize.js"
   },
   "scripts": {
-    "serve": "yarn http-server . -o -p 3000",
-    "start": "yarn electron . --enable-logging",
+    "serve": "yarn http-server  -o -p 3000",
+    "start": "yarn electron  --enable-logging",
     "build": "yarn electron-builder -mwl",
     "build:windows": "yarn electron-builder -w",
     "build:mac": "yarn electron-builder -m",
