--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
   },
   "devDependencies": {
     "@craco/craco": "^6.1.1",
+    "@monogatari/core": "^2.0.2",
     "@tailwindcss/postcss7-compat": "^2.1.0",
     "@types/filesystem": "^0.0.30",
     "@types/react-beautiful-dnd": "^13.0.0",
