--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
   "devDependencies": {
     "@craco/craco": "^6.1.1",
     "@monogatari/core": "^2.0.2",
+    "@octokit/rest": "^18.5.3",
     "@tailwindcss/postcss7-compat": "^2.1.0",
     "@types/filesystem": "^0.0.30",
     "@types/react-beautiful-dnd": "^13.0.0",
@@ -71,8 +72,13 @@
     "craco-alias": "^2.2.0",
     "eslint-config-prettier": "^8.1.0",
     "gh-pages": "^3.1.0",
+    "gistfs.js": "^1.0.0",
+    "github-api": "^3.4.0",
+    "octocat": "^1.2.1",
     "postcss": "^7",
     "prettier": "^2.2.1",
+    "react-artboard": "^0.0.4",
+    "react-gist": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "sweetalert2": "^10.16.4",
     "sweetalert2-react-content": "^3.3.1",
