--- a/package.json
+++ b/package.json
@@ -77,8 +77,9 @@
     "octocat": "^1.2.1",
     "postcss": "^7",
     "prettier": "^2.2.1",
-    "react-artboard": "^0.0.4",
+    "react-artboard": "^0.0.6",
     "react-gist": "^1.2.2",
+    "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "sweetalert2": "^10.16.4",
     "sweetalert2-react-content": "^3.3.1",
