--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@types/react-beautiful-dnd": "^13.0.0",
     "@types/react-router-dom": "^5.1.7",
     "autoprefixer": "^9",
+    "chickenpaint": "^0.1.1",
     "craco-alias": "^2.2.0",
     "eslint-config-prettier": "^8.1.0",
     "gh-pages": "^3.1.0",
