--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "gh-pages": "^3.1.0",
     "gistfs.js": "^1.0.0",
     "github-api": "^3.4.0",
+    "js-base64": "^3.6.0",
     "octocat": "^1.2.1",
     "postcss": "^7",
     "prettier": "^2.2.1",
@@ -82,6 +83,7 @@
     "react-gist": "^1.2.2",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
+    "simple-git": "^2.39.0",
     "sweetalert2": "^10.16.4",
     "sweetalert2-react-content": "^3.3.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat"
